feat: implement pod-based scanning architecture
This major refactor moves from synchronous subprocess-based scanning to
asynchronous pod-based scanning using Kubernetes Jobs.

## Architecture Changes
- Scanner jobs are now Kubernetes Jobs with TTLAfterFinished for automatic cleanup
- Jobs have owner references for garbage collection when NucleiScan is deleted
- Configurable concurrency limits, timeouts, and resource requirements

## New Features
- Dual-mode binary: --mode=controller (default) or --mode=scanner
- Annotation-based configuration for Ingress/VirtualService resources
- Operator-level configuration via environment variables
- Startup recovery for orphaned scans after operator restart
- Periodic cleanup of stuck jobs

## New Files
- DESIGN.md: Comprehensive architecture design document
- internal/jobmanager/: Job Manager for creating/monitoring scanner jobs
- internal/scanner/runner.go: Scanner mode implementation
- internal/annotations/: Annotation parsing utilities
- charts/nuclei-operator/templates/scanner-rbac.yaml: Scanner RBAC

## API Changes
- Added ScannerConfig struct for per-scan scanner configuration
- Added JobReference struct for tracking scanner jobs
- Added ScannerConfig field to NucleiScanSpec
- Added JobRef and ScanStartTime fields to NucleiScanStatus

## Supported Annotations
- nuclei.homelab.mortenolsen.pro/enabled
- nuclei.homelab.mortenolsen.pro/templates
- nuclei.homelab.mortenolsen.pro/severity
- nuclei.homelab.mortenolsen.pro/schedule
- nuclei.homelab.mortenolsen.pro/timeout
- nuclei.homelab.mortenolsen.pro/scanner-image

## RBAC Updates
- Added Job and Pod permissions for operator
- Created separate scanner service account with minimal permissions

## Documentation
- Updated README, user-guide, api.md, and Helm chart README
- Added example annotated Ingress resources

--- a/charts/nuclei-operator/templates/deployment.yaml
+++ b/charts/nuclei-operator/templates/deployment.yaml
@@ -60,6 +60,24 @@ spec:
           value: {{ .Values.nuclei.backoff.max | quote }}
         - name: NUCLEI_BACKOFF_MULTIPLIER
           value: {{ .Values.nuclei.backoff.multiplier | quote }}
+        - name: SCANNER_IMAGE
+          value: {{ .Values.scanner.image | default (printf "%s:%s" .Values.image.repository (.Values.image.tag | default .Chart.AppVersion)) | quote }}
+        - name: SCANNER_TIMEOUT
+          value: {{ .Values.scanner.timeout | quote }}
+        - name: MAX_CONCURRENT_SCANS
+          value: {{ .Values.scanner.maxConcurrent | quote }}
+        - name: JOB_TTL_AFTER_FINISHED
+          value: {{ .Values.scanner.ttlAfterFinished | quote }}
+        - name: SCANNER_SERVICE_ACCOUNT
+          value: {{ include "nuclei-operator.fullname" . }}-scanner
+        {{- if .Values.scanner.defaultTemplates }}
+        - name: DEFAULT_TEMPLATES
+          value: {{ join "," .Values.scanner.defaultTemplates | quote }}
+        {{- end }}
+        {{- if .Values.scanner.defaultSeverity }}
+        - name: DEFAULT_SEVERITY
+          value: {{ join "," .Values.scanner.defaultSeverity | quote }}
+        {{- end }}
         ports: []
         securityContext:
           {{- toYaml .Values.securityContext | nindent 10 }}
