--- a/charts/nuclei-operator/templates/rbac.yaml
+++ b/charts/nuclei-operator/templates/rbac.yaml
@@ -7,12 +7,38 @@ metadata:
     {{- include "nuclei-operator.labels" . | nindent 4 }}
 rules:
 - apiGroups:
+  - batch
+  resources:
+  - jobs
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
   - ""
   resources:
   - events
   verbs:
   - create
   - patch
+- apiGroups:
+  - ""
+  resources:
+  - pods
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - ""
+  resources:
+  - pods/log
+  verbs:
+  - get
 - apiGroups:
   - networking.istio.io
   resources:
